@@ -5,6 +5,9 @@
 	  GhostScript only embed fonts and not convert to another
 	  PostScript level.
 	
+	* db/source/printer/HP-LaserJet_1000.xml: Added instructions
+	  for uploading the firmware onto the HP LaserJet 1000.
+
 2002-11-26  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* db/source/printer/*.xml: Added HP DesignJet 250C, 430, 450C,
